# chess_bot_codename_mindstorm_v2

./: CMakeLists.txt
src/: constants.h  main.cpp
src/engine/: ai.cpp  ai.h  board.cpp  board.h  evaluation.cpp  evaluation.h  evalutaion.cpp  gameloops.cpp  gameloops.h  utils.cpp  utils.h
src/gui/: gui.cpp  gui.h
